--- a/index.html
+++ b/index.html
@@ -1,55 +1,284 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+      integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+      integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/wbbstyle.css" />
     <title>White Barrel Brewing</title>
-    <meta
-      name="description"
-      content="White Barrel Brewing LLC. White Barrel
-  means achieving something bigger, unique, and obtaining something prolific.
-  Collectively we have 20 years of brewing experience and now making our dream
-  of owning a brewery a reality."
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Google fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Open+Sans:300i,400,700|Roboto:300i,400,700"
-      rel="stylesheet"
-    />
-    <!-- Font Awesome -->
-    <link
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
-    />
-    <!-- CSS -->
-    <link href="vendor/bootstrap4.1.3/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/wbbstyles.css" rel="stylesheet" />
   </head>
 
-  <body>
-    <header>
-      <div class="jumbotron jumbotron-fluid">
-        <div><h1 class="display-4 hero-text-box">White Barrel Brewing</h1></div>
+  <body data-spy="scroll" data-target="main-nav" id="home">
+    <!-- NAVBAR -->
+    <nav
+      class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top"
+      id="main-nav"
+    >
+      <div class="container">
+        <a href="index.html" class="navbar-brand">White Barrel Brewing</a>
+        <button
+          class="navbar-toggler"
+          data-toggle="collapse"
+          data-target="#navbarCollapse"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
+            <li class="nav-item">
+              <a href="#about-head-section" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#support-head-section" class="nav-link">Support</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- HOME SECTION -->
+    <header id="home-section">
+      <div class="dark-overlay">
+        <div class="home-inner container">
+          <div class="row">
+            <div class="col-lg-12 d-sm-block">
+              <h1 class="display-4 text-sm-center">
+                White Barrel Brewing<span class="h3">&reg;</span>
+              </h1>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
 
-    <div class="container">
-      <div>
-        <p class="lead">
-          We are Jon-Paul Tualla and Brandon Waples. Collectively we have 20
-          years of brewing beer and now we want to make the dream become a
-          reality with your help.
-        </p>
+    <!-- ABOUT HEAD -->
+    <section id="about-head-section">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-4">White Barrel Brewing</h1>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ABOUT SECTION -->
+    <section id="about-section" class="bg-light text-muted py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <img
+              src="img/JP-beenie.jpg"
+              alt=""
+              class="img-fluid mb-3 rounded-circle"
+            />
+          </div>
+          <div class="col-md-4">
+            <h3><span class="fa fa-arrow-left"></span> I am Jon-Paul</h3>
+            <p>
+              After 14 years at a great company, "JP" walked away from a
+              promising career to follow his dreams and love of crafting beer.
+            </p>
+            <h3 class="text-right">
+              I am Brandon <span class="fa fa-arrow-right"></span>
+            </h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Recusandae ad beatae incidunt ipsa, quis quidem. Animi nam
+              expedita nostrum veniam.
+            </p>
+          </div>
+          <div class="col-md-4">
+            <img
+              src="img/brandon.png"
+              alt=""
+              class="img-fluid mb-3 rounded-circle"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SUPPORT HEAD -->
+    <section id="support-head-section">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-4">GoFundMe Campaign</h1>
+            <a
+              href="https://www.gofundme.com/az-brewery-start-up?fbclid=IwAR0d1LKucsBwnXUM3tm5O9uqtXG39ayjd85-Q-5x_-EDn99ZDDGPA_e5OD4"
+              target="https://www.gofundme.com/az-brewery-start-up?fbclid=IwAR0d1LKucsBwnXUM3tm5O9uqtXG39ayjd85-Q-5x_-EDn99ZDDGPA_e5OD4"
+              class="btn btn-outline-light"
+              >Find Out More</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SUPPORT SECTION -->
+    <section id="support-section" class="bg-light text-muted py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="img/tanktops.png"
+              alt=""
+              class="img-fluid mt-5 rounded-circle"
+            />
+          </div>
+          <div class="col-md-6">
+            <h3>Why GoFundMe?</h3>
+            <p class="lead">
+              We know this journey will be hard. With your help, we will buld
+              something unique and prolific. GoFundMe helps us to share our
+              story and rally support for our cause, great beer.
+            </p>
+            <div class="d-flex">
+              <div class="p-4 align-self-start">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4 align-self-end">
+                We are building strong community roots and are establishing
+                programs and events that support our local schools, first
+                responders, veterans, and active duty military.
+              </div>
+            </div>
+            <div class="d-flex">
+              <div class="p-4 align-self-start">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4 align-self-end">
+                Our dual 1 barrel nano brewery will produce a wonderful variety
+                of amazing craft beer, which we will have special release
+                parties for.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer id="main-footer" class="bg-dark">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-4">
+            <h3>White Barrel Brewing</h3>
+            <a
+              href="https://www.instagram.com/white_barrel_brewing/?hl=en"
+              target="https://www.instagram.com/white_barrel_brewing/?hl=en"
+            >
+              <span class="fa-lg"> <i class="fab fa-instagram"></i> </span>
+            </a>
+            <p>Copyright &copy; <span id="year"></span></p>
+            <button
+              class="btn-primary"
+              data-toggle="modal"
+              data-target="#contactModal"
+            >
+              Contact Us
+            </button>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <!-- CONTACT MODAL -->
+    <div class="modal fade text-dark" id="contactModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Contact Us</h5>
+            <button class="close" data-dismiss="modal">
+              <span>&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" />
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control" />
+              </div>
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea
+                  class="form-control"
+                  placeholder="Leave a message here."
+                ></textarea>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary btn-block">Submit</button>
+          </div>
+        </div>
       </div>
     </div>
 
-    <!-- JavaScript, jQuery & Popper.js -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap4.1.3/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="http://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
       integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+      integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+      crossorigin="anonymous"
+    ></script>
+
+    <script>
+      // Get the current year for the copyright
+      $('#year').text(new Date().getFullYear());
+
+      // init scrollspy
+      $('body').scrollspy({ target: 'main-nav' });
+
+      // add smooth scrolling
+      $('#main-nav a').on('click', function(e) {
+        //check for hash value
+        if (this.hash != '') {
+          // prevent default bevahior
+          e.preventDefault();
+
+          // store the hash
+          const hash = this.hash;
+
+          // animate smooth scroll
+          $('html, body').animate(
+            {
+              scrollTop: $(hash).offset().top
+            },
+            900,
+            function() {
+              // add hash to url after scroll
+              window.location.hash = hash;
+            }
+          );
+        }
+      });
+    </script>
   </body>
 </html>
