--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="White Barrel Brewing LLC. We have an intense focus on creating highly sought after craft beer. The birth of a white buffalo is a sacred sign of hope and an indication of good times to come. The symbol of the White Barrel embodies that."
+    />
+    "
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       rel="stylesheet"
@@ -12,8 +17,8 @@
     />
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-      integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/wbbstyle.css" />
@@ -69,7 +74,12 @@
       <div class="container">
         <div class="row">
           <div class="col text-center py-5">
-            <h1 class="display-4">White Barrel Brewing</h1>
+            <h1 class="display-3">Our Mission:</h1>
+            <h3>
+              Provide a constant variety of exceptional, hand-crafted beers in a
+              casual setting where families, friends, and neighbors experience
+              consistent quality and extraordinary experiences.
+            </h3>
           </div>
         </div>
       </div>
@@ -159,7 +169,7 @@
             </div>
             <div class="d-flex">
               <div class="p-4 align-self-start">
-                <i class="fas fa-check fa-2x"></i>
+                <i class="fab fa-instagram fa-3x"></i>
               </div>
               <div class="p-4 align-self-end">
                 Our dual 1 barrel nano brewery will produce a wonderful variety
@@ -177,14 +187,15 @@
       <div class="container">
         <div class="row">
           <div class="col text-center py-4">
-            <h3>White Barrel Brewing</h3>
             <a
               href="https://www.instagram.com/white_barrel_brewing/?hl=en"
               target="https://www.instagram.com/white_barrel_brewing/?hl=en"
             >
-              <span class="fa-lg"> <i class="fab fa-instagram"></i> </span>
+              <span class="fa-lg">
+                <i class="fab fa-instagram fa-2x"></i>
+              </span>
             </a>
-            <p>Copyright &copy; <span id="year"></span></p>
+            <p>Copyright &copy; <span id="year"></span> White Barrel Brewing</p>
             <button
               class="btn-primary"
               data-toggle="modal"
