--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       id="main-nav"
     >
       <div class="container">
-        <a href="index.html" class="navbar-brand">White Barrel Brewing</a>
+        <a href="index.html" class="navbar-brand"
+          >White Barrel Brewing<span class="h3">&reg;</span></a
+        >
         <button
           class="navbar-toggler"
           data-toggle="collapse"
@@ -59,10 +61,8 @@
       <div class="dark-overlay">
         <div class="home-inner container">
           <div class="row">
-            <div class="col-lg-12 d-sm-block">
-              <h1 class="display-4 text-sm-center">
-                White Barrel Brewing<span class="h3">&reg;</span>
-              </h1>
+            <div class="col d-sm-block">
+              <h1 class="display-2 text-sm-center">White Barrel Brewing</h1>
             </div>
           </div>
         </div>
@@ -131,7 +131,7 @@
             <a
               href="https://www.gofundme.com/az-brewery-start-up?fbclid=IwAR0d1LKucsBwnXUM3tm5O9uqtXG39ayjd85-Q-5x_-EDn99ZDDGPA_e5OD4"
               target="https://www.gofundme.com/az-brewery-start-up?fbclid=IwAR0d1LKucsBwnXUM3tm5O9uqtXG39ayjd85-Q-5x_-EDn99ZDDGPA_e5OD4"
-              class="btn btn-outline-light"
+              class="btn btn-outline-warning"
               >Find Out More</a
             >
           </div>
@@ -153,28 +153,29 @@
           <div class="col-md-6">
             <h3>Why GoFundMe?</h3>
             <p class="lead">
-              We know this journey will be hard. With your help, we will buld
-              something unique and prolific. GoFundMe helps us to share our
-              story and rally support for our cause, great beer.
+              We know this journey will be hard. With your help, we will build a
+              unique and prolific experience for the whole family. GoFundMe
+              helps us to share our story and rally support for our cause,
+              making great beer.
             </p>
             <div class="d-flex">
               <div class="p-4 align-self-start">
-                <i class="fas fa-check fa-2x"></i>
+                <i class="fas fa-beer fa-2x"></i>
               </div>
               <div class="p-4 align-self-end">
-                We are building strong community roots and are establishing
-                programs and events that support our local schools, first
-                responders, veterans, and active duty military.
+                We are building strong community roots and will establish events
+                that support our local schools, first responders, veterans, and
+                active duty military.
               </div>
             </div>
             <div class="d-flex">
               <div class="p-4 align-self-start">
-                <i class="fab fa-instagram fa-3x"></i>
+                <i class="fas fa-beer fa-2x"></i>
               </div>
               <div class="p-4 align-self-end">
-                Our dual 1 barrel nano brewery will produce a wonderful variety
-                of amazing craft beer, which we will have special release
-                parties for.
+                Our future dual one barrel nano brewery will be able to produce
+                a wonderful variety of amazing craft beer, which we will have
+                special release parties for.
               </div>
             </div>
           </div>
@@ -197,7 +198,7 @@
             </a>
             <p>Copyright &copy; <span id="year"></span> White Barrel Brewing</p>
             <button
-              class="btn-primary"
+              class="btn-warning"
               data-toggle="modal"
               data-target="#contactModal"
             >
@@ -219,18 +220,32 @@
             </button>
           </div>
           <div class="modal-body">
-            <form>
+            <!-- contact form using https://formspree.io -->
+            <form
+              id="contact-form"
+              name="contact-form"
+              action="https://formspree.io/whitebarrelbrewing@gmail.com"
+              method="POST"
+            >
               <div class="form-group">
                 <label for="name">Name</label>
-                <input type="text" class="form-control" />
+                <input type="text" id="name" name="name" class="form-control" />
               </div>
               <div class="form-group">
                 <label for="email">Email</label>
-                <input type="email" class="form-control" />
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  class="form-control"
+                />
               </div>
               <div class="form-group">
                 <label for="message">Message</label>
                 <textarea
+                  type="text"
+                  id="message"
+                  name="message"
                   class="form-control"
                   placeholder="Leave a message here."
                 ></textarea>
@@ -238,8 +253,9 @@
             </form>
           </div>
           <div class="modal-footer">
-            <button class="btn btn-primary btn-block">Submit</button>
+            <a class="btn btn-primary" onclick="validateForm()">Submit</a>
           </div>
+          <div class="status"></div>
         </div>
       </div>
     </div>
@@ -261,6 +277,35 @@
     ></script>
 
     <script>
+      //contact form validation
+      function validateForm() {
+        var name = document.getElementById('name').value;
+        if (name == '') {
+          document.getElementById('status').innerHTML = 'Name cannot be empty';
+          return false;
+        }
+        var email = document.getElementById('email').value;
+        if (email == '') {
+          document.getElementById('status').innerHTML = 'Email cannot be empty';
+          return false;
+        } else {
+          var re = /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+          if (!re.test(email)) {
+            document.getElementById('status').innerHTML =
+              'Email format invalid';
+            return false;
+          }
+        }
+        var message = document.getElementById('message').value;
+        if (message == '') {
+          document.getElementById('status').innerHTML =
+            'Message cannot be empty';
+          return false;
+        }
+        document.getElementById('status').innerHTML = 'Sending...';
+        document.getElementById('contact-form').submit();
+      }
+
       // Get the current year for the copyright
       $('#year').text(new Date().getFullYear());
 
