updated nav links
updated nav links, because they weren't working.

--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="#home-section" class="nav-link">Home</a></li>
             <li class="nav-item">
-              <a href="#about-head-section" class="nav-link">About</a>
+              <a href="#about-section" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="#support-head-section" class="nav-link">Support</a>
+              <a href="#support-section" class="nav-link">Support Us</a>
             </li>
           </ul>
         </div>
@@ -123,7 +123,7 @@
     </section>
 
     <!-- SUPPORT HEAD -->
-    <section id="support-head-section">
+    <section id="support-section">
       <div class="container">
         <div class="row">
           <div class="col text-center py-5">
