--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <div class="col text-center py-5">
             <h1 class="display-4">Our Mission:</h1>
             <h3>
-              Provide a constant variety of exceptional, hand-crafted beers in a
+              Our mission is to provide a constant variety of exceptional, hand-crafted beers in a
               casual setting where families, friends, and neighbors experience
               consistent quality and extraordinary experiences.
             </h3>
@@ -97,18 +97,15 @@
             />
           </div>
           <div class="col-md-4">
-            <h3><span class="fa fa-arrow-left"></span> I am Jon-Paul</h3>
+            <h3><span class="fa fa-arrow-left"></span> Jon-Paul</h3>
             <p>
-              After 14 years at a great company, "JP" walked away from a
-              promising career to follow his dreams and love of crafting beer.
+              The brewery is known as White Barrel Brewing LLC. White Barrel means achieving something bigger, unique, and obtaining something prolific. Like Captain Ahab hunting (Moby Dick) the great White Whale. We know this journey will be hard and the White Whale or White Buffalo is a symbol of abundance and the manifestation that one day we will not have to struggle to survive if the right action is joined by our intense focus on creating highly sought after craft beer. The birth of a sacred white buffalo is a sign of hope and an indication of good times to come. The symbol of the White Barrel embodies that.
             </p>
             <h3 class="text-right">
-              I am Brandon <span class="fa fa-arrow-right"></span>
+              Brandon <span class="fa fa-arrow-right"></span>
             </h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Recusandae ad beatae incidunt ipsa, quis quidem. Animi nam
-              expedita nostrum veniam.
+              Our dual 1 barrel nano brewery will produce a wonderful variety of amazing well crafted beer. We will have special bottle and can releases. We will facilitate fun and tasty events to support our local businesses in the community. Equally important, we are building strong community roots and are establishing programs and events that support our local schools, first responders, veterans, and active duty military. 
             </p>
           </div>
           <div class="col-md-4">
